# multiplexer

./: AGENTS.md  README.md  TODO.md  checks.sh  pyproject.toml  test_multiplexer.py
docs/: documentation.md
examples/: basic_example.py
multiplexer/: __init__.py  layout.py  multiplexer.py
specs/: implementation_plan.md
src/multiplexer/: __init__.py  layout.py  multiplexer.py  pane.py  styles.py
tests/: test_layout.py  test_pane.py
